Switch to toList()